# buildroot

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  apply_locales.py  build_config.h  check_return_value.py  check_sdk_extras_version.py  clobber.py  compiler_version.py  copy_test_data_ios.py  cp.py  detect_host_arch.py  dir_exists.py  download_gold_plugin.py  download_nacl_toolchains.py  download_sdk_extras.py  env_dump.py  extract_from_cab.py  find_isolated_tests.py  get_landmines.py  get_sdk_extras_packages.py  get_syzygy_binaries.py  gn_helpers.py  gyp_chromium  gyp_chromium.py  gyp_chromium_test.py  gyp_helper.py  gypi_to_gn.py  install-android-sdks.sh  install-build-deps.py  inverse_depth.py  landmines.py  protoc_java.py  read_file_names.py  rmdir_and_stamp.py  symlink.py  win_is_xtree_patched.py
android/: ndk_version.py
android/gyp/: aar.py  apkbuilder.py  compile_resources.py  copy_ex.py  create_apk_operations_script.py  create_java_binary_script.py  create_size_info_files.py  create_stack_script.py  desugar.py  dex.py  dist_aar.py  emma_instr.py  filter_zip.py  finalize_apk.py  find.py  gcc_preprocess.py  generate_v14_compatible_resources.py  ijar.py  jar_ex.py  jar_toc.py  java_cpp_enum.py  java_ex.py  javac.py  jinja_template.py  lint.py  main_dex_list.py  merge_manifest.py  prepare_resources.py  proguard.py  write_build_config.py  write_ordered_libraries.py  zip.py
android/gyp/util/: build_device.py  build_utils.py  diff_utils.py  jar_info_utils.py  md5_check.py  resource_utils.py
android/incremental_install/: generate_android_manifest.py  installer.py  write_installer_json.py
android/lint/: suppress.py  suppressions.xml
android/pylib/: android_commands.py  android_commands_unittest.py  chrome_test_server_spawner.py  cmd_helper.py  cmd_helper_test.py  content_settings.py  device_settings.py  forwarder.py  ports.py  valgrind_tools.py
android/pylib/base/: test_dispatcher_unittest.py
android/pylib/constants/: __init__.py
android/pylib/gtest/: gtest_test_instance_test.py  local_device_gtest_run.py  setup.py
android/pylib/host_driven/: setup.py  test_server.py  tests_annotations.py
android/pylib/instrumentation/: instrumentation_parser_test.py  instrumentation_test_instance.py  instrumentation_test_instance_test.py  json_perf_parser.py  test_jar.py  test_runner.py
android/pylib/linker/: test_case.py
android/pylib/local/device/: local_device_instrumentation_test_run.py  local_device_test_run.py
android/pylib/perf/: perf_control.py  perf_control_unittest.py  surface_stats_collector.py  surface_stats_collector_unittest.py  test_runner.py  thermal_throttle.py
android/pylib/remote/device/: remote_device_instrumentation_test_run.py  remote_device_test_run.py
android/pylib/results/: json_results.py  json_results_test.py  report_results.py
android/pylib/results/flakiness_dashboard/: json_results_generator.py
android/pylib/sdk/: aapt.py  dexdump.py
android/pylib/symbols/: elf_symbolizer.py  elf_symbolizer_unittest.py
android/pylib/symbols/mock_addr2line/: mock_addr2line
android/pylib/utils/: command_option_parser.py  device_temp_file_test.py  emulator.py  host_path_finder.py  isolator.py  json_results_generator_unittest.py  md5sum.py  md5sum_test.py  mock_calls.py  mock_calls_test.py  parallelizer_test.py  reraiser_thread_unittest.py
android/templates/: NativeLibraries.template
apple/script/: compile_storyboard.py  metal_compiler.py  write_pkg_info.py
apple/templates/: asset_catalog.gni  darwin_binary_bundle.gni  darwin_general_bundle.gni  merge_plist.gni  metal_compiler.gni  storyboards.gni  xib.gni
clang/pylib/clang/: compile_db.py
config/: BUILDCONFIG.gn  python.gni  sysroot.gni  zip.gni
config/android/: BUILD.gn  config.gni  get_sdk_ndk_path.py  internal_rules.gni  rules.gni
config/compiler/: BUILD.gn  compiler.gni
config/coverage/: BUILD.gn  coverage.gni
config/gcc/: BUILD.gn
config/harmony/: BUILD.gn  config.gni  get_sdk_ndk_path.py
config/ios/: BUILD.gn  deployment_target.gni  ios_sdk.gni  ios_sdk.py
config/ios/templates/: ios_app_bundle.gni
config/linux/: BUILD.gn  pkg-config.py  sysroot_ld_path.py
config/mac/: BUILD.gn  sdk_info.gni  xcode_toolchain.py
config/mac/script/: sdk_info.py
config/mac/templates/: mac_app_bundle.gni
config/sanitizers/: sanitizers.gni
config/templates/: templates.gni
config/tvos/: BUILD.gn  bundle_identifier_prefix.gni  deployment_target.gni  sdk_info.gni  tvos_sdk.gni  tvos_sdk.py
config/tvos/scripts/: sdk_info.py
config/tvos/templates/: tvos_app_bundle.gni  tvos_framework_bundle.gni
config/win/: win.gni
fuchsia/: fidl_gen_cpp.py  pave_device.py
linux/: .gitignore  install-chromeos-fonts.py  rewrite_dirs.py
linux/sysroot_scripts/: install-sysroot.py
linux/unbundle/: remove_bundled_libraries.py  replace_gyp_files.py
mac/: change_mach_o_flags.py  find_sdk.py  find_xcode_executable.py
mac/templates/: darwin_framework.gni
secondary/testing/FuzzFramework/: BUILD.gn  fuzz_test.gni
toolchain/: clang.gni  clang_static_analyzer_wrapper.py  concurrent_links.gni  gcc_toolchain.gni  gen_subspec_file.gni  get_concurrent_links.py  get_cpu_count.py  merge_podspec_file.py  wasm.gni
toolchain/android/: BUILD.gn
toolchain/harmony/: BUILD.gn
toolchain/linux/: BUILD.gn
toolchain/mac/: BUILD.gn  compile_xcassets.py
toolchain/wasm/: wasm_static_lib.gni
toolchain/win/: BUILD.gn  setup_toolchain.py
util/: write_cmake_config.gni  write_cmake_config.py
win/: generate_winrt_headers.py  reorder-imports.py  use_ansi_codes.py
win/importlibs/: create_importlib_win.py  filter_export_list.py
