# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # Maximum deployment target. Automatically detected by sdk_info.py but
  # needs to be specified to a version < 11.0 if targetting 32-bit archs.
  ios_deployment_target = "10.0"

  target_environment = "simulator"
}

assert(
    target_environment == "simulator" || target_environment == "device",
    "Only supported values for target_environment are 'simulator' and 'device'")