# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mac/mac_sdk.gni")

sdk_info = exec_script("//build/config/mac/script/sdk_info.py",
                       [
                         "--target-cpu",
                         current_cpu,
                         "--deployment-target",
                         mac_deployment_target,
                       ],
                       "json")