# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/tvos/deployment_target.gni")

sdk_info = exec_script("//build/config/tvos/scripts/sdk_info.py",
                       [
                         "--target-cpu",
                         current_cpu,
                         "--target-environment",
                         tv_target_environment,
                         "--deployment-target",
                         tvos_deployment_target,
                       ],
                       "json")
